--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "input-isp",
   "version": "0.1.11",
   "description": "A React component that renders an input field for phone numbers and detects the Internet Service Provider (ISP) of the entered phone number. The detected ISP logo is displayed next to the input field, and a loader is shown while the ISP is being detected.",
-  "author": "Alex Nguetcha <https://github.com/alexnguetcha>",
+  "author": {
+    "name": "Alex Nguetcha",
+    "email": "nguetchaalex@gmail.com"
+  },
   "main": "./dist/index.js",
   "module": "./build/index.es.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/alexnguetcha/input-isp"
+    "url": "git+https://github.com/alexnguetcha/input-isp.git"
   },
   "bugs": {
     "url": "https://github.com/alexnguetcha/input-isp/issues"
@@ -22,7 +25,8 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "init-msw": "msw init public/"
+    "init-msw": "msw init public/",
+    "chromatic": "npx chromatic --project-token=6aeb1d9c4f4e"
   },
   "files": [
     "dist"
@@ -80,6 +84,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "chromatic": "^6.17.1",
     "input-isp": "^0.1.8",
     "msw": "^0.42.0",
     "msw-storybook-addon": "^1.6.3",
@@ -101,5 +106,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "homepage": "https://github.com/alexnguetcha/input-isp#readme",
+  "_id": "input-isp@0.1.11"
 }
