--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,5 +17,8 @@ jobs:
       - name: Install dependencies
         run: yarn
 
+      - name: Test suites
+        run: npm run test -- --coverage
+
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
