Update workflow test

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "react-scripts start",
     "build0": "react-scripts build",
     "build": "rollup -c",
-    "test": "react-scripts test",
+    "test": "jest",
+    "coverage": "jest --coverage && codecov",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
