--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,52 +1,19 @@
 {
   "compilerOptions": {
-    "module": "esnext",
     "target": "es5",
-    "lib": [
-      "es6",
-      "dom"
-    ],
-    "sourceMap": true,
-    "jsx": "react",
-    "moduleResolution": "node",
+    "module": "esnext",
+    "lib": ["dom", "es2015", "es2017.object"],
+    "declaration": true,
+    "outDir": "dist",
     "rootDir": "src",
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noImplicitAny": false,
-    "strictNullChecks": false,
+    "strict": true,
+    "moduleResolution": "node",
     "esModuleInterop": true,
-    "baseUrl": "src/",
-    "paths": {
-      "assets": [
-        "src/assets/*"
-      ],
-      "common": [
-        "src/common/*"
-      ],
-      "components": [
-        "src/components/*"
-      ],
-      "hooks": [
-        "src/hooks/*"
-      ],
-      "utils": [
-        "src/utils/*"
-      ]
-    }
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "jsx": "react"
   },
-  "include": [
-    "src/index.ts",
-  ],
-  "exclude": [
-    "node_modules",
-    "build",
-    "dist",
-    "scripts",
-    "acceptance-tests",
-    "webpack",
-    "jest"
-  ],
-  "types": [
-    "typePatches"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "tests", "src/stories/**"]
 }
