--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@testing-library/user-event": "^13.2.1",
     "babel-plugin-named-exports-order": "^0.0.2",
     "chromatic": "^6.17.1",
+    "identity-obj-proxy": "^3.0.0",
     "input-isp": "^0.1.8",
     "msw": "^0.42.0",
     "msw-storybook-addon": "^1.6.3",
