--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
     "rollup-plugin-postcss": "^4.0.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.0",
-    "webpack": "^5.73.0"
+    "webpack": "^5.73.0",
+    "codecov": "^3.8.3"
   },
   "peerDependencies": {
     "prop-types": "^15.8.1",
@@ -111,5 +112,8 @@
   },
   "readme": "ERROR: No README data found!",
   "homepage": "https://github.com/alexnguetcha/input-isp#readme",
-  "_id": "input-isp@0.1.11"
+  "_id": "input-isp@0.1.11",
+  "dependencies": {
+    
+  }
 }
